--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "expo": "~51.0.26",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "4.0.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-reanimated": "~3.10.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
     "@types/react": "~18.2.45",
+    "tailwindcss": "^3.4.9",
     "typescript": "^5.1.3"
   },
   "private": true
